# OpenGL

./: .gitmodules  .ninja_deps  .ninja_log  3d_transformations.cpp  CMakeLists.txt  README.md  cohen_sutherland.cpp  hangman.cpp  legacy.cpp  main.cpp  midpoint_circle.cpp  sutherland_hodgemann.cpp  transformations.cpp
include/: DataService.hpp  DeadScreen.hpp  DisplayText.hpp  DrawHangman.hpp  GameScreen.hpp  InputHandlers.hpp  Navigator.hpp  Screen.hpp  Shader.hpp  SoundEffectService.h  StartScreen.hpp  Utilities.hpp  WonScreen.hpp  cube_transformation_util.h  display_text.hpp  shader.hpp  start_screen.hpp
libraries/freetype/builds/unix/: config.status  freetype-config  freetype2.pc  ftsystem.c  libtool  unix-cc.mk  unix-def.mk
libraries/freetype/objs/: apinames  autofit.lo  bdf.lo  cff.lo  dlg.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftexport.sym  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlzw.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftwinfnt.lo  libfreetype.la  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sdf.lo  sfnt.lo  smooth.lo  (+6 more)
libraries/freetype/objs/.libs/: libfreetype.lai  libfreetype.so.6.19.0  libfreetype.ver
libraries/glfw/: cmake_install.cmake  cmake_uninstall.cmake
libraries/glfw/src/: cmake_install.cmake  glfw3.pc
src/: DataService.cpp  DeadScreen.cpp  DisplayText.cpp  DrawHangman.cpp  GameScreen.cpp  InputHandlers.cpp  Navigator.cpp  Shader.cpp  SoundEffectService.cpp  StartScreen.cpp  Utilities.cpp  WonScreen.cpp  display_text.cpp  hangman.cpp  start_screen.cpp
src/labs/: 3d_transformations.cpp  bla.cpp  cohen_sutherland.cpp  dda.cpp  midpoint_ellipse.cpp
